// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Layout by default 1`] = `
<Layout
  save={[Function]}
  state={
    Object {
      "newP": null,
      "newPDup": null,
      "state": "default",
    }
  }
  submit={[Function]}
/>
`;

exports[`renders error when error 1`] = `
<div
  className="fixed-ends fixed-sides"
>
  <Err
    error="test error"
    msg="Looks like there was a problem"
  />
</div>
`;

exports[`renders loading when loading 1`] = `
<div
  className="fixed-ends fixed-sides"
>
  <Loading
    msg="Updating your password..."
  />
</div>
`;

exports[`renders success when success 1`] = `
<div
  className="fixed-ends fixed-sides"
>
  <Success
    msg="Your password has been updated!"
  />
</div>
`;
